# Darkathon2022

./: .gitignore  .pre-commit-config.yaml  README.md  Software Design Document.md  requirements.txt  setup.cfg
Machine_Learning/: get_data.py  helper.py  tensorflow_model.py  train_model.py
Machine_Learning/dataset/darkweb/: 10030349.html  10110074.html  10163768.html  10185583.html  10186141.html  10204553.html  10225241.html  10244744.html  10277931.html  10309403.html  10311302.html  10324829.html  10352838.html  10359876.html  10368463.html  10399628.html  10400498.html  10412792.html  10440143.html  10457689.html  10505084.html  10530372.html  10570962.html  10590369.html  10632212.html  10633650.html  10636831.html  10705136.html  10726701.html  10741454.html  10752777.html  10759970.html  10762170.html  10790658.html  10795407.html  10804478.html  10805165.html  10816407.html  10840288.html  10854830.html  (+988 more)
Machine_Learning/dataset/drugs/: 10045582.html  10153802.html  10188862.html  1020956.html  10258281.html  10767592.html  10811240.html  11142308.html  11371525.html  11468455.html  1158973.html  1167300.html  11897957.html  11930753.html  12336303.html  12645586.html  1354418.html  13547296.html  13858307.html  13998636.html  14363680.html  1478159.html  1521070.html  1593795.html  17970.html  1819274.html  18442895.html  18553719.html  1872378.html  18880340.html  18903239.html  19693249.html  2040672.html  20796307.html  (+50 more)
Machine_Learning/words/: 10025592.txt  10029989.txt  10031250.txt  10053350.txt  10057260.txt  10075698.txt  10089974.txt  1009602.txt  10099691.txt  10109120.txt  10131512.txt  10132479.txt  10138137.txt  10150184.txt  10161763.txt  10168775.txt  10190183.txt  10212913.txt  10214874.txt  10223500.txt  10229994.txt  10271982.txt  1030487.txt  10305427.txt  10324053.txt  10328087.txt  10332165.txt  10332522.txt  10338639.txt  10348611.txt  1036686.txt  10366941.txt  10385503.txt  10401897.txt  10420733.txt  10430500.txt  10431643.txt  1044115.txt  10474687.txt  10478267.txt  (+2296 more)
config/: config.json
helper_scripts/: consumer.py  infra_down.py  log_reset.py
ml_files/: cv.pickle  knn.pkl  svm_linear.pkl
src/narco_config/: main.py
src/narco_crawler/: __init__.py  backend_handler.py  config.py  db.py  main.py
testing/: somethingelse.py
testing/ahmia/: Dockerfile  main.py
testing/tor/: Dockerfile  commands.txt
(+1203 files in other folders)
