[metadata]
name = hello_world
version = 0.0.1
description = hello_world
author = MustansirG
author_email = me@mustansirg.in
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = hello_world
include_package_data = True
package_dir =
	= src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24
    coverage-badge
    python-coveralls
    pyyaml
    black==22.3.0

[flake8]
max-line-length = 160

[options.package_data]
slapping = py.typed
