[metadata]
name = NarcoCrawler
version = 0.0.1
description = Dark web crawler
author = MustansirG
author_email = me@mustansirg.in
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = narco_crawler
include_package_data = True
package_dir =
	= src
install_requires =
    rich==12.2.0
    pysocks
    mysql-connector
    requests
    docker
    datetime
    os
    requests
    kafka-python

[options.entry_points]
console_scripts =
    narco-crawler = narco_crawler.main:main


[flake8]
max-line-length = 160

[options.package_data]
slapping = py.typed
