[metadata]
name = NarcoCrawler
version = 0.0.1
description = Dark web crawler
author = MustansirG
author_email = me@mustansirg.in
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = 
    narco_crawler
    narco_config
include_package_data = True
package_dir =
	= src

[options.entry_points]
console_scripts =
    narco-crawler = narco_crawler.main:main
    narco-config = narco_config.main:main

[flake8]
max-line-length = 160

[options.package_data]
slapping = py.typed
